# python-package-poetry-boilerplate

./: .pre-commit-config.yaml  README.md  pyproject.toml  rename.sh
boilerplate/: __init__.py  say_hello.py
docs/: conf.py  index.rst  quickstart.rst
docs/api/: boilerplate.rst  modules.rst
src/boilerplate/: __init__.py  _say_hello.py  _version.py
tests/: test_hello_world.py  test_say_hello.py
